test_cases/pass/p01.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x, y, z
x=y=z=99
PRINT: x & " " & y & " " & z
END SCRIPT
