test_cases/fail/f51.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
BREAK
END SCRIPT